# AI-Development-System-v1

./: .gitignore  CLAUDE.md  LICENSE  README.md  config_example.yaml  pyproject.toml  requirements.txt
docs/: architecture.md  pipeline.md  roadmap.md  security-rules.md  threat-model.md  vision.md
examples/: __init__.py  pipeline.py  run_pipeline.py
examples/agents/: __init__.py  architecture_agent.py  backend_agent.py  reviewer_agent.py
logs/: audit.jsonl
skills/: documentation_skill.md  image_generation_skill.md
src/: __init__.py  cli.py  config.py  utils.py
src/agents/: __init__.py  base.py  builtin.py  orchestrator.py  registry.py
src/audit/: __init__.py  logger.py
src/generator/: __init__.py  generator.py
src/pipeline/: __init__.py  engine.py  stages.py
src/security/: __init__.py  classifier.py  sanitizer.py  validator.py
